--- a/content/resources/21a-442jf14-th.md
+++ b/content/resources/21a-442jf14-th.md
@@ -4,7 +4,7 @@ description: Thumbnail image. The white scarf of the Mothers of the Plaza de May
   The Mothers are an association of Argentine women whose children "disappeared" during
   the "Dirty War" of the military dictatorship between 1976 and 1983. Image courtesy
   of puroticorico on flickr. License CC BY.
-file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21a-442j-violence-human-rights-and-justice-fall-2014/23f8bd37cfca0904f9db371dbc81cdce_21a-442jf14-th.jpg
+file: /media/courses/21a-442j-violence-human-rights-and-justice-fall-2014/23f8bd37cfca0904f9db371dbc81cdce_21a-442jf14-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: The white scarf of the Mothers of the Plaza de Mayo. The Mothers are an
@@ -15,8 +15,10 @@ image_metadata:
   image-alt: An image of a white shawl tied at the neck is superimposed on a red brick
     background.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: Timeless Memories Of Las Madres de la Plaza de Mayo (thumbnail)
 uid: 23f8bd37-cfca-0904-f9db-371dbc81cdce
 ---
+Thumbnail image. The white scarf of the Mothers of the Plaza de Mayo. The Mothers are an association of Argentine women whose children "disappeared" during the "Dirty War" of the military dictatorship between 1976 and 1983. Image courtesy of puroticorico on flickr. License CC BY.
